# SRE-Bot-Autonomous-Incident-Remediation-Environment

./: .gitignore  README.md  graders.py  inference.py  openenv.yaml  pyproject.toml
dashboard/: package-lock.json  package.json  skills-lock.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api/stream-logs/: route.ts
dashboard/components/: action-ledger.tsx  adversarial-terminal.tsx  topology-map.tsx
dashboard/lib/: types.ts  utils.ts
engine/: Dockerfile  agent.py  env.py  graders.py  main.py  models.py  requirements.txt  stream.py
server/: app.py
sre_bot_environment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_env.py
