[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-bot-environment"
version = "1.0.0"
description = "Autonomous Incident Remediation RL Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    "openai>=2.30.0",
]

[project.scripts]
server = "server.app:main"
[tool.setuptools]
packages = ["server", "engine", "dashboard"]
